# idcard-ocr

./: .gitattributes  CMakeLists.txt  README.md
src/: main.1  main.cpp
